--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,10 @@ name: Release
 permissions:
   contents: write
 
-on: [push, pull_request]
+on: 
+  push:
+    branches: master
+  pull_request:
 
 jobs:
   build:
