--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -18,3 +18,6 @@ serde = { version = "1.0.159", features = ["derive"] }
 srtparse = "0.2.0"
 thiserror = "1.0.38"
 tracing = "0.1.37"
+
+[dev-dependencies]
+claims = "0.7.1"
