--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,14 +80,14 @@ jobs:
       - name: Cache dependencies
         uses: Swatinem/rust-cache@v2
 
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
+      #- name: Run cargo fmt
+      #  uses: actions-rs/cargo@v1
+      #  with:
+      #    command: fmt
+      #    args: --all -- --check
 
-      - name: Run cargo clippy
-        uses: actions-rs/cargo@v1
-        with:
-          command: clippy
-          args: -- -D warnings
+      #- name: Run cargo clippy
+      #  uses: actions-rs/cargo@v1
+      #  with:
+      #    command: clippy
+      #    args: -- -D warnings
