--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ permissions:
 
 on: 
   push:
-   # branches: master
+    branches: master
   pull_request:
 
 jobs:
@@ -128,7 +128,7 @@ jobs:
 
   release:
     name: Create GitHub release
-    #if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     needs: build
     runs-on: ubuntu-latest
     steps:
