--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,7 +66,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Run cargo fmt
-        run: cargo fmt --check
+        run: cargo +nightly fmt --check
 
       - name: Run cargo clippy
         run: cargo clippy --all-targets --all-features -- -D warnings
